infra/development/k8s/backend_end.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-api-svc
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: local-api-pod

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-api-pod
  template:
    metadata:
      labels:
        app: local-api-pod
    spec:
      # ▼ unUseProduction
      volumes:
        - name: src
          hostPath:
            path: /Users/mike.kodama/Development/k8s-elixir/server
            type: DirectoryOrCreate
      # ▲ unUseProduction
      containers:
        - name: local-api-container
          image: k8s-back-end-image:latest
          # ▼ unUseProduction
          imagePullPolicy: IfNotPresent
#          env:
#            - name: DB_HOST
#              value: local-postgres-svc
#            - name: DB_PORT
#              value: "15432"
#            - name: DB_USER
#              value: postgres
#            - name: DB_DATEBASE
#              value: elixir_dev
#            - name: DB_PASSWORD
#              value: postgres
#            - name: PORT
#              value: "8080"
          # ▲ unUseProduction
          ports:
            - containerPort: 8080
          # ▼ unUseProduction
#          volumeMounts:
#            - mountPath: /app
#              name: src
          workingDir: /app
          command:
            - sh
            - -c
            - "iex -S mix phx.server"
          # ▲ unUseProduction
#          readinessProbe:
#            httpGet:
#              port: 8080
#              path: /api/health-check
#            timeoutSeconds: 60
